--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "aos": "^2.3.4",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "next": "15.0.4",
+    "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
