--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
