--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.12.0",
     "aos": "^2.3.4",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
