--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.12.0",
+    "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
