--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.12.0",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "next": "15.0.4",
@@ -26,7 +28,9 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
+    "react-lottie": "^1.2.10",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
