--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "aos": "^2.3.4",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "next": "15.0.4",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.13.1",
